# fastapi-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  conftest.py  pyproject.toml
src/alembic/: env.py
src/fastapi_lab/: container.py  lifespan.py
src/fastapi_lab/apps/: api.py  cron.py  webook.py  worker.py
src/fastapi_lab/modules/system_maintaining/presentation/: on_checking_liveness.py  on_dispatching_event.py
src/fastapi_lab/modules/system_maintaining/presentation/amqp/: on_checking_broker.py
src/fastapi_lab/modules/system_maintaining/presentation/http/: on_checking_liveness.py  on_checking_readiness.py  on_dispatching_event.py
src/fastapi_lab/orm/: metadata.py
src/fastapi_lab/orm/models/general/: log.py  order.py  product.py  user.py
src/fastapi_lab/schemas/: paginated_data.py  response_payload.py
tests/e2e/: test_check_broker.py  test_check_liveness.py
tests/integration/: test_celery.py  test_sqlalchemy.py
tests/unit/: test_async_functionality.py  test_get_version.py
